--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,39 @@
+# For PCBs designed using KiCad: http://www.kicad-pcb.org/
+# Format documentation: http://kicad-pcb.org/help/file-formats/
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*~
+_autosave-*
+*.tmp
+*-cache.lib
+*-rescue.lib
+*-save.pro
+*-save.kicad_pcb
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
+
+# Filesystem artifacts
+.directory
+
+# cmake artifacts
+CMakeCache.txt
+CMakeFiles/
 build/
-tools/
-
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
 
 # Imported libraries
-lib/CppPotpourri
-lib/ManuvrArduino
-lib/ManuvrDrivers
-lib/teensy4_i2c
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# Filemanager artifacts
-.directory
+components/CppPotpourri
+components/ManuvrDrivers
+components/ManuvrPlatform
